build an MSIX package